--- a/css/main.css
+++ b/css/main.css
@@ -255,3 +255,26 @@
 .yahoo:hover {
   background-color: #9412cd !important;
 }
+
+/* Colorful scrollbar start */
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: teal; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+/* Colorful scrollbar end */
